src/objects/ACETEligibilityCalculator__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculation_Days__c</fullName>
        <label>Calculation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Topic__c</fullName>
        <label>Call Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Type__c</fullName>
        <label>Call Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsValidRequiredFutureDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsValidRequiredFutureDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LagRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lag Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_Period_Large_Group__c</fullName>
        <label>Waiting Period Large Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Waiting_Period_Small_Group__c</fullName>
        <label>Waiting Period Small Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ACETEligibilityCalculator</label>
</CustomObject>